cabal-version:      2.4
name:               RAScal-hs
version:            0.1.0
author:             Stephan Schiffels
maintainer:         stephan_schiffels@eva.mpg.de
extra-source-files: CHANGELOG.md

executable RAScal-hs
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.1.0,
    hs-source-dirs:   src
    default-language: Haskell2010
